replaced "collect(Collectors.toList())" to "toList()"